--- a/fe/sivishop/src/style/pages/_all.scss
+++ b/fe/sivishop/src/style/pages/_all.scss
@@ -1,5 +1,6 @@
 @use "sass:map";
 @import "theme";
+@import "reponsive";
 
 html,
 body {
@@ -23,6 +24,28 @@ body {
 .row {
   display: flex;
   flex-wrap: wrap;
+}
+
+@include Reponsive($DESKTOP) {
+  .col-lg-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  .col-lg-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
+@include Reponsive($MEDIUM_DEVICE) {
+  .col-lg-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  .col-lg-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
 }
 
 .col-6 {
