--- a/fe/sivishop/src/style/pages/_all.scss
+++ b/fe/sivishop/src/style/pages/_all.scss
@@ -26,12 +26,39 @@ body {
   flex-wrap: wrap;
 }
 
+.col-6 {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+.col-lg-3 {
+  flex: 0 0 25%;
+  max-width: 25%;
+}
+
+.col-lg-6 {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+.button-submit {
+  font-size: 14px;
+  color: #fff;
+  font-weight: 800;
+  text-transform: capitalize;
+  display: inline-block;
+  padding: 16px 30px 17px;
+  background: map.get($theme-colors, "main");
+  border: none;
+  height: 100%;
+}
+
 @include Reponsive($DESKTOP) {
-  .col-lg-3 {
+  .col-xl-3 {
     flex: 0 0 25%;
     max-width: 25%;
   }
-  .col-lg-6 {
+  .col-xl-6 {
     flex: 0 0 50%;
     max-width: 50%;
   }
@@ -42,13 +69,33 @@ body {
     flex: 0 0 25%;
     max-width: 25%;
   }
-  .col-lg-6 {
+}
+
+@include Reponsive($TABLET_DEVICE) {
+  .col-md-6 {
     flex: 0 0 50%;
     max-width: 50%;
   }
+  .col-md-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
 }
 
-.col-6 {
-  flex: 0 0 50%;
-  max-width: 50%;
+@include Reponsive($WIDE_MOBILE) {
+  .col-sm-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .col-sm-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
+@include Reponsive($SMALL_DEVICES) {
+  .col-xs-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
 }
