--- a/fe/sivishop/src/pages/users/homePage/style.scss
+++ b/fe/sivishop/src/pages/users/homePage/style.scss
@@ -39,3 +39,44 @@
     }
   }
 }
+
+.featured {
+  margin-top: 50px;
+
+  .section-title {
+    text-align: center;
+
+    h2 {
+      position: relative;
+    }
+
+    h2:after {
+      position: absolute;
+      left: 0;
+      bottom: -15px;
+      right: 0;
+      height: 4px;
+      width: 80px;
+      background: map.get($theme-colors, "main");
+      content: "";
+      margin: 0;
+    }
+  }
+  .react-tabs {
+    ul {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 50px;
+    }
+
+    li {
+      list-style: none;
+      font-size: 18px;
+      color: map.get($theme-colors, "normal-text");
+      display: inline-block;
+      margin-right: 25px;
+      position: relative;
+      cursor: pointer;
+    }
+  }
+}
